--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "base-front-build",
+  "name": "SUB",
   "version": "1.0.0",
-  "description": "The base project fornt builder (jQuery / LESS)",
+  "description": "SUB Tiers",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/anisabid/base-front-build.git"
@@ -21,10 +21,12 @@
     "gulp-typescript": "^2.8.0",
     "gulp-uglify": "^1.5.1",
     "open": "0.0.5",
+    "path": "^0.12.7",
     "serve-static": "^1.10.0",
     "yargs": "^3.30.0"
   },
   "dependencies": {
+    "font-awesome": "^4.5.0",
     "jquery": "1.12.0"
   }
 }
