--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "homepage": "https://github.com/anisabid/base-front-build.git#readme",
   "devDependencies": {
+    "bootstrap": "^3.3.6",
     "browser-sync": "^2.11.1",
     "connect": "^3.4.0",
     "del": "^1.2.0",
@@ -18,6 +19,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-less": "^3.0.5",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.1.1",
     "gulp-typescript": "^2.8.0",
     "gulp-uglify": "^1.5.1",
     "open": "0.0.5",
