--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "homepage": "https://github.com/anisabid/base-front-build.git#readme",
   "devDependencies": {
-    "bootstrap": "^3.3.6",
+
     "browser-sync": "^2.11.1",
     "connect": "^3.4.0",
     "del": "^1.2.0",
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "font-awesome": "^4.5.0",
-    "jquery": "1.12.0"
+    "jquery": "1.12.0",
+    "bootstrap": "^3.3.6"
   }
 }
