--- a/package.json
+++ b/package.json
@@ -1,35 +1,30 @@
 {
-  "name": "SUB",
+  "name": "wordappeal",
   "version": "1.0.0",
-  "description": "SUB Tiers",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/anisabid/base-front-build.git"
+  "description": "",
+  "main": "",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "bower install"
   },
-  "bugs": {
-    "url": "https://github.com/anisabid/base-front-build.git/issues"
-  },
-  "homepage": "https://github.com/anisabid/base-front-build.git#readme",
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-
+    "bower": "^1.7.9",
     "browser-sync": "^2.11.1",
-    "connect": "^3.4.0",
-    "del": "^1.2.0",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
-    "gulp-less": "^3.0.5",
+    "gulp-inject": "^3.0.0",
+    "gulp-minify": "0.0.11",
+    "gulp-preprocess": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.1",
-    "gulp-typescript": "^2.8.0",
-    "gulp-uglify": "^1.5.1",
-    "open": "0.0.5",
-    "path": "^0.12.7",
-    "serve-static": "^1.10.0",
-    "yargs": "^3.30.0"
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7",
+    "run-sequence": "^1.2.0",
+    "superstatic": "^1.2.3"
   },
-  "dependencies": {
-    "font-awesome": "^4.5.0",
-    "jquery": "1.12.0",
-    "bootstrap": "^3.3.6"
-  }
+  "dependencies": {}
 }
